--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 30
 
     defaultConfig {
-        applicationId "com.example.app"
+        applicationId "com.exileng.NGSpaceCompany"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
