--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    package="com.example.app"
+    package="com.exileng.NGSpaceCompany"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,7 +13,7 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:configChanges="orientation|screenSize"
-            android:name="com.example.app.MainActivity"
+            android:name="com.exileng.NGSpaceCompany.MainActivity"
             android:label="@string/app_name"
             android:exported="true">
             <intent-filter>
@@ -22,4 +22,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
